# webgpu-pointcloud

./: .env.example  .gitignore  Cargo.toml  build.rs  index.html  package.json  server.js
.github/workflows/: static.yml
src/: app.rs  controls.rs  lib.rs  main.rs  platform.rs  pointcloud.rs  points.rs  shader.wgsl  shaders.wgsl  shaders2.wgsl  state.rs  vertex.rs
src/engine/: camera.rs  engine.rs  input.rs  mod.rs  pipeline.rs  uniform.rs
src/shaders/: hsl.wgsl  intensity.wgsl  simple.wgsl
