[package]
name = "ejemplo-wasm-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.15.0"
cfg-if = "1.0.0"
cgmath = "0.18.0"
dioxus = "0.5.6"
env_logger = "0.11.3"
fastrand = "2.1.0"
las = "0.9.1"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = "0.29.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.8", features = ["blocking"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.20.0", features = ["webgpu"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
]}
js-sys = "0.3"
