[package]
name = "webgpu-pointcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_webgpu_pointcloud"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1", features = ["derive"]}
cfg-if = "1"
fastrand = "2.1"
glam = { version = "0.30",  features = ["bytemuck"]}
las = "0.9"
log = "0.4"
wgpu = "25"
winit = "0.30"

[build-dependencies]
naga = { version = "25", features = ["wgsl-in"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"
reqwest = { version = "0.12", features = ["blocking"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "*", features = ["webgpu"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
]}
js-sys = "0.3"
